--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link href="css/index.css">
     <title>Hello World</title>
 </head>
 <body>
