--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
     <div id="content"></div>
     <!-- uncomment the line bellow for cordova feature -->
-    <!-- <script type="text/javascript" src="cordova.js"></script> -->
+     <script type="text/javascript" src="cordova.js"></script>
 </body>
 
 </html>
